--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 </head>
 <body>
     <div class="container-fluid">
-        <img class="bg" src="img/background.PNG" />
+        <img class="bg" src="img/background.PNG" alt="background photo" />
         <div class="row">
             <div class="col1 col-sm-3 col-md-3 col-lg-3 col-xl-3">
                 <div class="navbar navbar-expand-xl col-sm-12 col-md-12 col-lg-12 col-xl-12">
                     <a href=" " class="navbar-brand">
-                        <img src="img/logo.png" class="logo" width="150px" alt="logo frostbite from djuksico on logopond.com"/>
+                        <img src="img/logo.png" class="logo" alt="logo frostbite from djuksico on logopond.com"/>
                     </a>
                     <div class="nav">
                         <ul class="row navbar-nav flex-column">
@@ -46,11 +46,10 @@
             </div>
             <div class="col2 col-sm-9 col-md-9 col-lg-9 col-xl-9">
                 <h1>Welcome to <span class="h1"> <span class="firstLetter">f</span>rost <span class="firstLetter">b</span>ite</span>
-                <small>
-                    <p>Lorem Ipsum</p>
-                    <p>"Neque porro quisquam est qui dolorem </p>
-                    <p>ipsum quia dolor sit amet, consectetur, adipisci velit...."</p>
-                </small>
+                <small> Lorem Ipsum</small>
+                <small>"Neque porro quisquam est qui dolorem </small>
+                <small>ipsum quia dolor sit amet, consectetur, adipisci velit...."</small>
+
                 </h1>
             </div>
         </div>
