--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
 
-    <title>Home page</title>
+    <title>Frost Bite</title>
 
     <meta
             name="viewport"
@@ -13,17 +13,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
-    <style>
-        /*[class^="container"] {*/
-        /*    border: 5px solid red;*/
-        /*}*/
-        /*.row {*/
-        /*    border: 5px solid orange;*/
-        /*}*/
-        /*[class^="col"] {*/
-        /*    border: 5px solid limegreen;*/
-        /*}*/
-    </style>
 </head>
 <body>
     <div class="container-fluid">
